--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Dancecolor</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/tablet.css">
-    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tablet.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="sidebar">
     <div class="sidebar__content">
-        <img alt="close" class="sidebar__content-btn" src="../images/close.svg">
+        <img alt="close" class="sidebar__content-btn" src="images/close.svg">
         <div class="navigation">
             <nav>
                 <a href="#" class="navigation__item-active">
                     Услуги
-                    <img alt="home" src="../images/right-arrow.svg">
+                    <img alt="home" src="images/right-arrow.svg">
                 </a>
                 <div id="submenu-container"></div>
                 <a href="#">Экскурсии</a>
@@ -38,11 +38,11 @@
         <div class="sidebar__contacts">
             <span>Москва, ул. Ленина, 12</span>
             <a href="tel:+79998888888">
-                <img alt="phone" class="sidebar__contacts__phone" src="../images/phone.svg">
+                <img alt="phone" class="sidebar__contacts__phone" src="images/phone.svg">
                 8 (999) 888-88-88
             </a>
             <a href="mailto:8888@center.ru">
-                <img alt="email" class="sidebar__contacts__mail" src="../images/mail.svg">
+                <img alt="email" class="sidebar__contacts__mail" src="images/mail.svg">
                 8888@center.ru
             </a>
         </div>
@@ -55,17 +55,17 @@
         </div>
         <div class="header__menu">
             <a href="#">
-                <img alt="" src="../images/nav.svg">
+                <img alt="" src="images/nav.svg">
                 Услуги
             </a>
             <a href="#">Экскурсии</a>
             <a href="#">Новости</a>
             <a href="#">О центре</a>
             <a href="#">Контакты</a>
-            <img class="header__burger-icon" alt="burger" src="../images/burger.svg">
+            <img class="header__burger-icon" alt="burger" src="images/burger.svg">
         </div>
     </div>
 </div>
-<script src="../js/toggle-menu.js"></script>
+<script src="js/toggle-menu.js"></script>
 </body>
 </html>
